tests/failing/vec.tail
let v1:S(int,8) = 8 in
let v2:<int>2 = [2,v1] in
let v3:<int>2 = prArrI(v2) in
let v4:S(int,8) = 8 in
let v5:[int]0 = addi(5,v4) in
let v6:<int>3 = [addi(v5,addi(4,v4)),v5,v4] in
let v7:<int>3 = prArrI(v6) in
i2d(b2iV(ff))
